--- a/ressource/ressource.qrc
+++ b/ressource/ressource.qrc
@@ -150,5 +150,6 @@
         <file>style/images/up_arrow.png</file>
         <file>style/images/Vmovetoolbar.png</file>
         <file>style/images/Vsepartoolbar.png</file>
+        <file>../third-party-licenses.txt</file>
     </qresource>
 </RCC>
