--- a/dct_widgets/inoutbox/inoutbox.ui
+++ b/dct_widgets/inoutbox/inoutbox.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>700</width>
-    <height>871</height>
+    <height>928</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -27,13 +27,13 @@
        <widget class="QLabel" name="lblExposure">
         <property name="minimumSize">
          <size>
-          <width>130</width>
+          <width>140</width>
           <height>0</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
-          <width>130</width>
+          <width>140</width>
           <height>16777215</height>
          </size>
         </property>
@@ -65,13 +65,13 @@
        <widget class="QLabel" name="lblAnalogueGain">
         <property name="minimumSize">
          <size>
-          <width>130</width>
+          <width>140</width>
           <height>0</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
-          <width>130</width>
+          <width>140</width>
           <height>16777215</height>
          </size>
         </property>
@@ -139,13 +139,13 @@
        <widget class="QLabel" name="lblBayerPattern">
         <property name="minimumSize">
          <size>
-          <width>130</width>
+          <width>140</width>
           <height>0</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
-          <width>130</width>
+          <width>140</width>
           <height>16777215</height>
          </size>
         </property>
@@ -184,13 +184,13 @@
        <widget class="QLabel" name="lblAperture">
         <property name="minimumSize">
          <size>
-          <width>130</width>
+          <width>140</width>
           <height>0</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
-          <width>130</width>
+          <width>140</width>
           <height>16777215</height>
          </size>
         </property>
@@ -235,13 +235,13 @@
        <widget class="QLabel" name="lblAecEnable">
         <property name="minimumSize">
          <size>
-          <width>130</width>
+          <width>140</width>
           <height>0</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
-          <width>130</width>
+          <width>140</width>
           <height>16777215</height>
          </size>
         </property>
@@ -261,13 +261,13 @@
        <widget class="QLabel" name="lblTaf">
         <property name="minimumSize">
          <size>
-          <width>130</width>
+          <width>140</width>
           <height>0</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
-          <width>130</width>
+          <width>140</width>
           <height>16777215</height>
          </size>
         </property>
@@ -280,13 +280,13 @@
        <widget class="QLabel" name="lblSetPoint">
         <property name="minimumSize">
          <size>
-          <width>130</width>
+          <width>140</width>
           <height>0</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
-          <width>130</width>
+          <width>140</width>
           <height>16777215</height>
          </size>
         </property>
@@ -316,13 +316,13 @@
        <widget class="QLabel" name="lblControlSpeed">
         <property name="minimumSize">
          <size>
-          <width>130</width>
+          <width>140</width>
           <height>0</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
-          <width>130</width>
+          <width>140</width>
           <height>16777215</height>
          </size>
         </property>
@@ -402,13 +402,13 @@
          <widget class="QLabel" name="lblOffset">
           <property name="minimumSize">
            <size>
-            <width>130</width>
+            <width>140</width>
             <height>0</height>
            </size>
           </property>
           <property name="maximumSize">
            <size>
-            <width>130</width>
+            <width>140</width>
             <height>16777215</height>
            </size>
           </property>
@@ -444,13 +444,13 @@
          <widget class="QLabel" name="lblSlope">
           <property name="minimumSize">
            <size>
-            <width>130</width>
+            <width>140</width>
             <height>0</height>
            </size>
           </property>
           <property name="maximumSize">
            <size>
-            <width>130</width>
+            <width>140</width>
             <height>16777215</height>
            </size>
           </property>
@@ -463,13 +463,13 @@
          <widget class="QLabel" name="lblK">
           <property name="minimumSize">
            <size>
-            <width>130</width>
+            <width>140</width>
             <height>0</height>
            </size>
           </property>
           <property name="maximumSize">
            <size>
-            <width>130</width>
+            <width>140</width>
             <height>16777215</height>
            </size>
           </property>
@@ -534,13 +534,13 @@
          <widget class="QLabel" name="lblLscEnable">
           <property name="minimumSize">
            <size>
-            <width>130</width>
+            <width>140</width>
             <height>0</height>
            </size>
           </property>
           <property name="maximumSize">
            <size>
-            <width>130</width>
+            <width>140</width>
             <height>16777215</height>
            </size>
           </property>
@@ -571,13 +571,13 @@
        <widget class="QLabel" name="lblFlip">
         <property name="minimumSize">
          <size>
-          <width>130</width>
+          <width>140</width>
           <height>0</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
-          <width>130</width>
+          <width>140</width>
           <height>16777215</height>
          </size>
         </property>
@@ -590,13 +590,13 @@
        <widget class="QLabel" name="lblVideoMode">
         <property name="minimumSize">
          <size>
-          <width>130</width>
+          <width>140</width>
           <height>0</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
-          <width>130</width>
+          <width>140</width>
           <height>16777215</height>
          </size>
         </property>
@@ -625,13 +625,13 @@
        <widget class="QLabel" name="lblSdi2Mode">
         <property name="minimumSize">
          <size>
-          <width>130</width>
+          <width>140</width>
           <height>0</height>
          </size>
         </property>
         <property name="maximumSize">
          <size>
-          <width>130</width>
+          <width>140</width>
           <height>16777215</height>
          </size>
         </property>
@@ -674,6 +674,18 @@
       </item>
       <item row="6" column="0">
        <widget class="QLabel" name="lblTestPattern">
+        <property name="minimumSize">
+         <size>
+          <width>140</width>
+          <height>0</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>140</width>
+          <height>16777215</height>
+         </size>
+        </property>
         <property name="text">
          <string>Test Pattern</string>
         </property>
@@ -691,6 +703,12 @@
    </item>
    <item>
     <widget class="QGroupBox" name="gbxGenLockSettings">
+     <property name="maximumSize">
+      <size>
+       <width>16777215</width>
+       <height>16777215</height>
+      </size>
+     </property>
      <property name="title">
       <string>Genlock Configuration</string>
      </property>
@@ -743,7 +761,7 @@
         </property>
         <property name="maximumSize">
          <size>
-          <width>210</width>
+          <width>16777215</width>
           <height>16777215</height>
          </size>
         </property>
@@ -762,7 +780,7 @@
         </property>
         <property name="maximumSize">
          <size>
-          <width>210</width>
+          <width>16777215</width>
           <height>16777215</height>
          </size>
         </property>
@@ -794,7 +812,7 @@
         </property>
         <property name="maximumSize">
          <size>
-          <width>210</width>
+          <width>16777215</width>
           <height>16777215</height>
          </size>
         </property>
@@ -820,7 +838,7 @@
         </property>
         <property name="maximumSize">
          <size>
-          <width>210</width>
+          <width>16777215</width>
           <height>16777215</height>
          </size>
         </property>
@@ -858,14 +876,14 @@
     <widget class="QGroupBox" name="gbxTimeCodeSettings">
      <property name="minimumSize">
       <size>
-       <width>682</width>
-       <height>60</height>
+       <width>0</width>
+       <height>0</height>
       </size>
      </property>
      <property name="maximumSize">
       <size>
        <width>16777215</width>
-       <height>65</height>
+       <height>16777215</height>
       </size>
      </property>
      <property name="title">
