--- a/dct_widgets/infobox/infobox.ui
+++ b/dct_widgets/infobox/infobox.ui
@@ -672,6 +672,12 @@
     <layout class="QHBoxLayout" name="horizontalLayout">
      <item>
       <widget class="QGroupBox" name="gpxSettings">
+       <property name="minimumSize">
+        <size>
+         <width>400</width>
+         <height>0</height>
+        </size>
+       </property>
        <property name="title">
         <string>System Settings</string>
        </property>
@@ -680,6 +686,9 @@
          <widget class="QLabel" name="lblNote">
           <property name="text">
            <string>Note: This Settings can not be changed in Broadcast Mode.</string>
+          </property>
+          <property name="wordWrap">
+           <bool>true</bool>
           </property>
          </widget>
         </item>
