--- a/dct_widgets/dpccbox/dpccbox.ui
+++ b/dct_widgets/dpccbox/dpccbox.ui
@@ -79,7 +79,7 @@
           <item>
            <widget class="QLabel" name="lblLevel">
             <property name="text">
-             <string>Level:</string>
+             <string>Auto-Detection Level:</string>
             </property>
            </widget>
           </item>
